--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@theme {
+  --color-primary: #3A66F0;
+  --color-secondary: #0D0D0D;
+}
+
+@layer base {
+  body {
+    @apply bg-black text-white;
+  }
+}
